// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginGrid should render 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="PluginGrid"
    >
      <div
        class="grid grid-cols-4 gap-5 undefined"
      >
        <div
          data-testid="PluginCard--ark-explorer"
        >
          <div
            class="Cardstyles__Wrapper-sc-1uddqgb-0 kZYJmz h-full border-theme-primary-contrast hover:border-theme-background"
            data-testid="Card"
          >
            <div
              class="h-full flex flex-col justify-between my-auto font-semibold"
            >
              <div
                class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cJdTNL rounded"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="ark-explorer"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"35\\" cx=\\"40\\" cy=\\"70\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                      title="ark-explorer"
                    />
                  </div>
                </div>
              </div>
              <div
                class="flex-1 flex items-center mb-2 space-x-2 text-lg text-theme-primary"
              >
                <div>
                  ARK Explorer
                </div>
                <div>
                  <div
                    class="sc-gsTCUz cyuCsN"
                    height="16"
                    width="16"
                  >
                    <svg>
                      official-ark-plugin.svg
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="flex space-x-4 divide-x-1 divide-theme-neutral-300 dark:divide-theme-neutral-800 text-sm text-theme-neutral-light"
              >
                <div>
                  ARK.io
                </div>
                <div>
                  <div
                    class="flex"
                    data-testid="ReviewRating"
                  >
                    <div
                      class="relative my-auto"
                    >
                      <div
                        class="overflow-hidden absolute"
                        style="width: 80%;"
                      >
                        <svg
                          class="text-theme-warning-400 w-5"
                        >
                          star.svg
                        </svg>
                      </div>
                      <svg
                        class="text-theme-neutral w-5"
                      >
                        star.svg
                      </svg>
                    </div>
                    <span
                      class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                    >
                      4.2
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            />
          </div>
        </div>
        <div
          data-testid="PluginCard--ark-avatars"
        >
          <div
            class="Cardstyles__Wrapper-sc-1uddqgb-0 kZYJmz h-full border-theme-primary-contrast hover:border-theme-background"
            data-testid="Card"
          >
            <div
              class="h-full flex flex-col justify-between my-auto font-semibold"
            >
              <div
                class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cJdTNL rounded"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="ark-avatars"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"40\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"50\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                      title="ark-avatars"
                    />
                  </div>
                </div>
              </div>
              <div
                class="flex-1 flex items-center mb-2 space-x-2 text-lg text-theme-primary"
              >
                <div>
                  ARK Avatars
                </div>
                <div>
                  <div
                    class="sc-gsTCUz fHxsLl"
                    height="20"
                    width="20"
                  >
                    <svg>
                      grant.svg
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="flex space-x-4 divide-x-1 divide-theme-neutral-300 dark:divide-theme-neutral-800 text-sm text-theme-neutral-light"
              >
                <div>
                  ARK.io
                </div>
                <div>
                  <div
                    class="flex"
                    data-testid="ReviewRating"
                  >
                    <div
                      class="relative my-auto"
                    >
                      <div
                        class="overflow-hidden absolute"
                        style="width: 70%;"
                      >
                        <svg
                          class="text-theme-warning-400 w-5"
                        >
                          star.svg
                        </svg>
                      </div>
                      <svg
                        class="text-theme-neutral w-5"
                      >
                        star.svg
                      </svg>
                    </div>
                    <span
                      class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                    >
                      3.8
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            >
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="flex overflow-hidden justify-center w-4"
                  >
                    <div
                      class="sc-gsTCUz cXMmJt p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-danger-400"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        settings.svg
                      </svg>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex justify-center mt-4"
      >
        <div
          class="Pagination__Wrapper-x7juhx-0 hyaceY mt-5"
          data-testid="Pagination"
        >
          <div
            class="flex px-2 rounded bg-theme-primary-contrast"
          >
            <div
              class="Pagination__PaginationButton-x7juhx-1 gpUeNS current-page"
            >
              1
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should render without pagination 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="PluginGrid"
    >
      <div
        class="grid grid-cols-4 gap-5 undefined"
      >
        <div
          data-testid="PluginCard--ark-explorer"
        >
          <div
            class="Cardstyles__Wrapper-sc-1uddqgb-0 kZYJmz h-full border-theme-primary-contrast hover:border-theme-background"
            data-testid="Card"
          >
            <div
              class="h-full flex flex-col justify-between my-auto font-semibold"
            >
              <div
                class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cJdTNL rounded"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="ark-explorer"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"35\\" cx=\\"40\\" cy=\\"70\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                      title="ark-explorer"
                    />
                  </div>
                </div>
              </div>
              <div
                class="flex-1 flex items-center mb-2 space-x-2 text-lg text-theme-primary"
              >
                <div>
                  ARK Explorer
                </div>
                <div>
                  <div
                    class="sc-gsTCUz cyuCsN"
                    height="16"
                    width="16"
                  >
                    <svg>
                      official-ark-plugin.svg
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="flex space-x-4 divide-x-1 divide-theme-neutral-300 dark:divide-theme-neutral-800 text-sm text-theme-neutral-light"
              >
                <div>
                  ARK.io
                </div>
                <div>
                  <div
                    class="flex"
                    data-testid="ReviewRating"
                  >
                    <div
                      class="relative my-auto"
                    >
                      <div
                        class="overflow-hidden absolute"
                        style="width: 80%;"
                      >
                        <svg
                          class="text-theme-warning-400 w-5"
                        >
                          star.svg
                        </svg>
                      </div>
                      <svg
                        class="text-theme-neutral w-5"
                      >
                        star.svg
                      </svg>
                    </div>
                    <span
                      class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                    >
                      4.2
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            />
          </div>
        </div>
        <div
          data-testid="PluginCard--ark-avatars"
        >
          <div
            class="Cardstyles__Wrapper-sc-1uddqgb-0 kZYJmz h-full border-theme-primary-contrast hover:border-theme-background"
            data-testid="Card"
          >
            <div
              class="h-full flex flex-col justify-between my-auto font-semibold"
            >
              <div
                class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cJdTNL rounded"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="ark-avatars"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"40\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"50\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                      title="ark-avatars"
                    />
                  </div>
                </div>
              </div>
              <div
                class="flex-1 flex items-center mb-2 space-x-2 text-lg text-theme-primary"
              >
                <div>
                  ARK Avatars
                </div>
                <div>
                  <div
                    class="sc-gsTCUz fHxsLl"
                    height="20"
                    width="20"
                  >
                    <svg>
                      grant.svg
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="flex space-x-4 divide-x-1 divide-theme-neutral-300 dark:divide-theme-neutral-800 text-sm text-theme-neutral-light"
              >
                <div>
                  ARK.io
                </div>
                <div>
                  <div
                    class="flex"
                    data-testid="ReviewRating"
                  >
                    <div
                      class="relative my-auto"
                    >
                      <div
                        class="overflow-hidden absolute"
                        style="width: 70%;"
                      >
                        <svg
                          class="text-theme-warning-400 w-5"
                        >
                          star.svg
                        </svg>
                      </div>
                      <svg
                        class="text-theme-neutral w-5"
                      >
                        star.svg
                      </svg>
                    </div>
                    <span
                      class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                    >
                      3.8
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            >
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="flex overflow-hidden justify-center w-4"
                  >
                    <div
                      class="sc-gsTCUz cXMmJt p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-danger-400"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        settings.svg
                      </svg>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex justify-center mt-4"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should split by page 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="PluginGrid"
    >
      <div
        class="grid grid-cols-4 gap-5 undefined"
      >
        <div
          data-testid="PluginCard--ark-avatars"
        >
          <div
            class="Cardstyles__Wrapper-sc-1uddqgb-0 kZYJmz h-full border-theme-primary-contrast hover:border-theme-background"
            data-testid="Card"
          >
            <div
              class="h-full flex flex-col justify-between my-auto font-semibold"
            >
              <div
                class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cJdTNL rounded"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="ark-avatars"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"40\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"50\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                      title="ark-avatars"
                    />
                  </div>
                </div>
              </div>
              <div
                class="flex-1 flex items-center mb-2 space-x-2 text-lg text-theme-primary"
              >
                <div>
                  ARK Avatars
                </div>
                <div>
                  <div
                    class="sc-gsTCUz fHxsLl"
                    height="20"
                    width="20"
                  >
                    <svg>
                      grant.svg
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="flex space-x-4 divide-x-1 divide-theme-neutral-300 dark:divide-theme-neutral-800 text-sm text-theme-neutral-light"
              >
                <div>
                  ARK.io
                </div>
                <div>
                  <div
                    class="flex"
                    data-testid="ReviewRating"
                  >
                    <div
                      class="relative my-auto"
                    >
                      <div
                        class="overflow-hidden absolute"
                        style="width: 70%;"
                      >
                        <svg
                          class="text-theme-warning-400 w-5"
                        >
                          star.svg
                        </svg>
                      </div>
                      <svg
                        class="text-theme-neutral w-5"
                      >
                        star.svg
                      </svg>
                    </div>
                    <span
                      class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                    >
                      3.8
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            >
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="flex overflow-hidden justify-center w-4"
                  >
                    <div
                      class="sc-gsTCUz cXMmJt p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-danger-400"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        settings.svg
                      </svg>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex justify-center mt-4"
      >
        <div
          class="Pagination__Wrapper-x7juhx-0 hyaceY mt-5"
          data-testid="Pagination"
        >
          <button
            class="Button__StyledButton-mdtvtf-0 bHPNtZ"
            data-testid="Pagination__previous"
            type="button"
          >
            <div
              class="sc-gsTCUz jsttWF mr-2"
              height="10"
              width="10"
            >
              <svg>
                back.svg
              </svg>
            </div>
            Previous
          </button>
          <div
            class="flex px-2 rounded bg-theme-primary-contrast"
          >
            <div
              class="Pagination__PaginationButton-x7juhx-1 gpUeNS"
            >
              1
            </div>
            <div
              class="Pagination__PaginationButton-x7juhx-1 gpUeNS current-page"
            >
              2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should trigger delete 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="PluginGrid"
    >
      <div
        class="grid grid-cols-4 gap-5 undefined"
      >
        <div
          data-testid="PluginCard--ark-explorer"
        >
          <div
            class="Cardstyles__Wrapper-sc-1uddqgb-0 kZYJmz h-full border-theme-primary-contrast hover:border-theme-background"
            data-testid="Card"
          >
            <div
              class="h-full flex flex-col justify-between my-auto font-semibold"
            >
              <div
                class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cJdTNL rounded"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="ark-explorer"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"35\\" cx=\\"40\\" cy=\\"70\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                      title="ark-explorer"
                    />
                  </div>
                </div>
              </div>
              <div
                class="flex-1 flex items-center mb-2 space-x-2 text-lg text-theme-primary"
              >
                <div>
                  ARK Explorer
                </div>
                <div>
                  <div
                    class="sc-gsTCUz cyuCsN"
                    height="16"
                    width="16"
                  >
                    <svg>
                      official-ark-plugin.svg
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="flex space-x-4 divide-x-1 divide-theme-neutral-300 dark:divide-theme-neutral-800 text-sm text-theme-neutral-light"
              >
                <div>
                  ARK.io
                </div>
                <div>
                  <div
                    class="flex"
                    data-testid="ReviewRating"
                  >
                    <div
                      class="relative my-auto"
                    >
                      <div
                        class="overflow-hidden absolute"
                        style="width: 80%;"
                      >
                        <svg
                          class="text-theme-warning-400 w-5"
                        >
                          star.svg
                        </svg>
                      </div>
                      <svg
                        class="text-theme-neutral w-5"
                      >
                        star.svg
                      </svg>
                    </div>
                    <span
                      class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                    >
                      4.2
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            />
          </div>
        </div>
        <div
          data-testid="PluginCard--ark-avatars"
        >
          <div
            class="Cardstyles__Wrapper-sc-1uddqgb-0 kZYJmz h-full border-theme-primary-contrast hover:border-theme-background"
            data-testid="Card"
          >
            <div
              class="h-full flex flex-col justify-between my-auto font-semibold"
            >
              <div
                class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cJdTNL rounded"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="ark-avatars"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"40\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"50\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                      title="ark-avatars"
                    />
                  </div>
                </div>
              </div>
              <div
                class="flex-1 flex items-center mb-2 space-x-2 text-lg text-theme-primary"
              >
                <div>
                  ARK Avatars
                </div>
                <div>
                  <div
                    class="sc-gsTCUz fHxsLl"
                    height="20"
                    width="20"
                  >
                    <svg>
                      grant.svg
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="flex space-x-4 divide-x-1 divide-theme-neutral-300 dark:divide-theme-neutral-800 text-sm text-theme-neutral-light"
              >
                <div>
                  ARK.io
                </div>
                <div>
                  <div
                    class="flex"
                    data-testid="ReviewRating"
                  >
                    <div
                      class="relative my-auto"
                    >
                      <div
                        class="overflow-hidden absolute"
                        style="width: 70%;"
                      >
                        <svg
                          class="text-theme-warning-400 w-5"
                        >
                          star.svg
                        </svg>
                      </div>
                      <svg
                        class="text-theme-neutral w-5"
                      >
                        star.svg
                      </svg>
                    </div>
                    <span
                      class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                    >
                      3.8
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            >
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="flex overflow-hidden justify-center w-4"
                  >
                    <div
                      class="sc-gsTCUz cXMmJt p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-danger-400"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        settings.svg
                      </svg>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex justify-center mt-4"
      >
        <div
          class="Pagination__Wrapper-x7juhx-0 hyaceY mt-5"
          data-testid="Pagination"
        >
          <div
            class="flex px-2 rounded bg-theme-primary-contrast"
          >
            <div
              class="Pagination__PaginationButton-x7juhx-1 gpUeNS current-page"
            >
              1
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should trigger select 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="PluginGrid"
    >
      <div
        class="grid grid-cols-4 gap-5 undefined"
      >
        <div
          data-testid="PluginCard--ark-explorer"
        >
          <div
            class="Cardstyles__Wrapper-sc-1uddqgb-0 kZYJmz h-full border-theme-primary-contrast hover:border-theme-background"
            data-testid="Card"
          >
            <div
              class="h-full flex flex-col justify-between my-auto font-semibold"
            >
              <div
                class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cJdTNL rounded"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="ark-explorer"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"35\\" cx=\\"40\\" cy=\\"70\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                      title="ark-explorer"
                    />
                  </div>
                </div>
              </div>
              <div
                class="flex-1 flex items-center mb-2 space-x-2 text-lg text-theme-primary"
              >
                <div>
                  ARK Explorer
                </div>
                <div>
                  <div
                    class="sc-gsTCUz cyuCsN"
                    height="16"
                    width="16"
                  >
                    <svg>
                      official-ark-plugin.svg
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="flex space-x-4 divide-x-1 divide-theme-neutral-300 dark:divide-theme-neutral-800 text-sm text-theme-neutral-light"
              >
                <div>
                  ARK.io
                </div>
                <div>
                  <div
                    class="flex"
                    data-testid="ReviewRating"
                  >
                    <div
                      class="relative my-auto"
                    >
                      <div
                        class="overflow-hidden absolute"
                        style="width: 80%;"
                      >
                        <svg
                          class="text-theme-warning-400 w-5"
                        >
                          star.svg
                        </svg>
                      </div>
                      <svg
                        class="text-theme-neutral w-5"
                      >
                        star.svg
                      </svg>
                    </div>
                    <span
                      class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                    >
                      4.2
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            />
          </div>
        </div>
        <div
          data-testid="PluginCard--ark-avatars"
        >
          <div
            class="Cardstyles__Wrapper-sc-1uddqgb-0 kZYJmz h-full border-theme-primary-contrast hover:border-theme-background"
            data-testid="Card"
          >
            <div
              class="h-full flex flex-col justify-between my-auto font-semibold"
            >
              <div
                class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cJdTNL rounded"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="ark-avatars"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"40\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"50\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                      title="ark-avatars"
                    />
                  </div>
                </div>
              </div>
              <div
                class="flex-1 flex items-center mb-2 space-x-2 text-lg text-theme-primary"
              >
                <div>
                  ARK Avatars
                </div>
                <div>
                  <div
                    class="sc-gsTCUz fHxsLl"
                    height="20"
                    width="20"
                  >
                    <svg>
                      grant.svg
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="flex space-x-4 divide-x-1 divide-theme-neutral-300 dark:divide-theme-neutral-800 text-sm text-theme-neutral-light"
              >
                <div>
                  ARK.io
                </div>
                <div>
                  <div
                    class="flex"
                    data-testid="ReviewRating"
                  >
                    <div
                      class="relative my-auto"
                    >
                      <div
                        class="overflow-hidden absolute"
                        style="width: 70%;"
                      >
                        <svg
                          class="text-theme-warning-400 w-5"
                        >
                          star.svg
                        </svg>
                      </div>
                      <svg
                        class="text-theme-neutral w-5"
                      >
                        star.svg
                      </svg>
                    </div>
                    <span
                      class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                    >
                      3.8
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
            >
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="flex overflow-hidden justify-center w-4"
                  >
                    <div
                      class="sc-gsTCUz cXMmJt p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-danger-400"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        settings.svg
                      </svg>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex justify-center mt-4"
      >
        <div
          class="Pagination__Wrapper-x7juhx-0 hyaceY mt-5"
          data-testid="Pagination"
        >
          <div
            class="flex px-2 rounded bg-theme-primary-contrast"
          >
            <div
              class="Pagination__PaginationButton-x7juhx-1 gpUeNS current-page"
            >
              1
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
